--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <input type='text' placeholder='Type something' @keypress='handleKeyPressed'/>
+        <input type='text' placeholder='Enter a text' @keypress='handleKeyPressed'/>
 
         <p id="p" v-if="show">You entered the letter a/A key</p>
     </div>
